paas/dayzero/updates/central-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    email: support@stackrox.com
    meta.helm.sh/release-name: stackrox-central-services
    meta.helm.sh/release-namespace: stackrox
    openshift.io/host.generated: "true"
    owner: stackrox
  creationTimestamp: "2021-11-30T15:49:51Z"
  labels:
    app.kubernetes.io/component: central
    app.kubernetes.io/instance: stackrox-central-services
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: stackrox
    app.kubernetes.io/part-of: stackrox-central-services
    app.kubernetes.io/version: 3.67.0
    helm.sh/chart: stackrox-central-services-67.0.0
  name: central
  namespace: stackrox
  ownerReferences:
  - apiVersion: platform.stackrox.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: Central
    name: stackrox-central-services
    uid: f56b0f96-7f3c-438e-a6f0-7ebc5176b710
  resourceVersion: "56036309"
  uid: 42bb51aa-f813-4562-b1e1-7fe95284ddc6
spec:
  host: central-stackrox.apps.ocp1.azure.dso.digital.mod.uk
  port:
    targetPort: https
  tls:
    destinationCACertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIB1DCCAXqgAwIBAgIUQiQoD2t/L5Bb7pAN8QlTTyd9NhcwCgYIKoZIzj0EAwIw
[...]
      29uqEUACIQDSaJr23x3VFEh0GPjh3XZrNO6n5b74blj8UM+CVBOEgA==
      -----END CERTIFICATE-----
    termination: reencrypt
  to:
    kind: Service
    name: central
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2021-11-30T15:49:51Z"
      status: "True"
      type: Admitted
    host: central-stackrox.apps.ocp1.azure.dso.digital.mod.uk
    routerCanonicalHostname: router-default.apps.ocp1.azure.dso.digital.mod.uk
    routerName: default
    wildcardPolicy: None
